--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,5 +1,23 @@
 #root {
-  max-width: 1280px;
+  max-width: 80rem;
   margin: 0 auto;
   padding: 2rem;
+}
+
+.app-container {
+  display: flex;
+  min-width: 100%;
+  height: 100vh;
+}
+
+.chat-list-column {
+  flex: 0 0 18.75rem;
+  overflow-y: auto;
+  border-right: 1px solid #ccc;
+}
+
+.chat-messages-column {
+  flex-grow: 1;
+  overflow-y: auto;
+  word-wrap: break-word;
 }
