--- a/frontend/src/components/ChatList.css
+++ b/frontend/src/components/ChatList.css
@@ -6,7 +6,7 @@
     padding: 0.5rem;
 }
 
-.chat-box {
+.chat-list-box {
     background-color: #fbfbff;
     padding: 0.5rem;
     border-radius: 4px;
